# lasor

./: AGENTS.md  Cargo.toml  README.md  deep-research-report.md  lasor.toml  shell.nix  skills-lock.json  taskfile.yml
.github/workflows/: release.yml
src/: app.rs  config.rs  main.rs  mode.rs  platform.rs
src/app/: draw.rs  laser.rs  mod.rs  toolbar.rs
