[package]
name = "lasor"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.31", features = ["wgpu", "glow"] }
egui = "0.31"
winit = "0.30"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_UI_HiDpi", "Win32_Graphics_Gdi"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", default-features = false }

[profile.release]
opt-level = 3
